--- a/C-Miki.bib
+++ b/C-Miki.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.6.
+% This file was created with JabRef 2.7.2.
 % Encoding: SJIS
 
 @ARTICLE{1987_386_73,
@@ -505,6 +505,25 @@
   url = {http://ci.nii.ac.jp/naid/10009264684/}
 }
 
+@ARTICLE{1999_17_111,
+  author = {三木 千壽 and 穴見 健吾 and 谷 英樹 and 杉本 一朗},
+  title = {溶接止端部改良による疲労強度向上法},
+  journal = {溶接学会論文集},
+  year = {1999},
+  volume = {17},
+  pages = {111-119},
+  number = {1},
+  month = {02},
+  day = {05},
+  file = {1999_17_111_溶接止端部改良による疲労強度向上法.pdf:1999_17_111_溶接止端部改良による疲労強度向上法.pdf:PDF},
+  issn = {02884771},
+  owner = {03948},
+  pdf = {1999_17_111_溶接止端部改良による疲労強度向上法.pdf},
+  publisher = {社団法人溶接学会},
+  timestamp = {2011.12.08},
+  url = {http://ci.nii.ac.jp/naid/110003421917/}
+}
+
 @ARTICLE{1997_563_41,
   author = {三木 千壽 and 舘石 和雄},
   title = {鋼橋I形断面部材におけるスカラップディテールの疲労設計手法},
@@ -886,6 +905,25 @@
   publisher = {土木学会},
   timestamp = {2011.12.05},
   url = {http://ci.nii.ac.jp/naid/40004505772/}
+}
+
+@ARTICLE{1986_4_157,
+  author = {三木 千寿 and 森 猛 and 佐々木 利視 and 竹名 興英 and 阪本 謙二},
+  title = {縦方向すみ肉溶接継手の疲労強度 : 溶接棒継ぎの影響},
+  journal = {溶接学会論文集},
+  year = {1986},
+  volume = {4},
+  pages = {157-164},
+  number = {2},
+  month = {05},
+  day = {05},
+  file = {1986_4_157_縦方向すみ肉溶接継手の疲労強度・溶接棒継ぎの影響.pdf:1986_4_157_縦方向すみ肉溶接継手の疲労強度・溶接棒継ぎの影響.pdf:PDF},
+  issn = {02884771},
+  owner = {03948},
+  pdf = {1986_4_157_縦方向すみ肉溶接継手の疲労強度・溶接棒継ぎの影響.pdf},
+  publisher = {社団法人溶接学会},
+  timestamp = {2011.12.08},
+  url = {http://ci.nii.ac.jp/naid/110003422712/}
 }
 
 @ARTICLE{1984_344_377,
@@ -1440,6 +1478,25 @@
   publisher = {土木学会},
   timestamp = {2011.12.05},
   url = {http://ci.nii.ac.jp/naid/10001838845/}
+}
+
+@ARTICLE{2005_23_422,
+  author = {南 邦明 and 糟谷 正 and 三木 千壽},
+  title = {道路橋示方書におけるすみ肉溶接サイズ基準の考察},
+  journal = {溶接学会論文集},
+  year = {2005},
+  volume = {23},
+  pages = {422-430},
+  number = {3},
+  month = {08},
+  day = {05},
+  file = {2005_23_422_道路橋示方書におけるすみ肉溶接サイズ基準の考察.pdf:2005_23_422_道路橋示方書におけるすみ肉溶接サイズ基準の考察.pdf:PDF},
+  issn = {02884771},
+  owner = {03948},
+  pdf = {2005_23_422_道路橋示方書におけるすみ肉溶接サイズ基準の考察.pdf},
+  publisher = {社団法人溶接学会},
+  timestamp = {2011.12.08},
+  url = {http://ci.nii.ac.jp/naid/110003423567/}
 }
 
 @ARTICLE{2007_63_142,
@@ -2099,6 +2156,25 @@
   timestamp = {2011.11.26}
 }
 
+@ARTICLE{1999_17_130,
+  author = {瀬戸 厚司 and 増田 智紀 and 町田 進 and 三木 千壽},
+  title = {溶接きずを有する継手の極低サイクル疲労特性 : ガス導管円周溶接部の許容きず寸法の検討},
+  journal = {溶接学会論文集},
+  year = {1999},
+  volume = {17},
+  pages = {130-138},
+  number = {1},
+  month = {02},
+  day = {05},
+  file = {1999_17_130_溶接きずを有する継手の極低サイクル疲労特性・ガス導管円周溶接部の許容きず寸法の検討.pdf:1999_17_130_溶接きずを有する継手の極低サイクル疲労特性・ガス導管円周溶接部の許容きず寸法の検討.pdf:PDF},
+  issn = {02884771},
+  owner = {03948},
+  pdf = {1999_17_130_溶接きずを有する継手の極低サイクル疲労特性・ガス導管円周溶接部の許容きず寸法の検討.pdf},
+  publisher = {社団法人溶接学会},
+  timestamp = {2011.12.08},
+  url = {http://ci.nii.ac.jp/naid/110003421919/}
+}
+
 @ARTICLE{2011_67_396,
   author = {田井政行 and 三木千壽 and 鈴木啓悟},
   title = {ハンマーピーニング処理による面外ガセットの溶接止端部の疲労強度改善},
@@ -2400,6 +2476,25 @@
   file = {2007_63_35_鋼床版のデッキプレートとトラフリブ間の縦方向溶接部の疲労に対するEFFECTIVE NOTCH STRESSによる評価.pdf:2007_63_35_鋼床版のデッキプレートとトラフリブ間の縦方向溶接部の疲労に対するEFFECTIVE NOTCH STRESSによる評価.pdf:PDF},
   pdf = {2007_63_35_鋼床版のデッキプレートとトラフリブ間の縦方向溶接部の疲労に対するEFFECTIVE NOTCH STRESSによる評価.pdf},
   timestamp = {2011.11.26}
+}
+
+@ARTICLE{2001_19_709,
+  author = {萱森 陽一 and 瀬戸 厚司 and 増田 智紀 and 町田 進 and 三木 千壽},
+  title = {溶接欠陥を有する継手の極低サイクル疲労特性に及ぼす板厚の影響 : ガス導管円周溶接部の許容きず寸法の検討(第2報)},
+  journal = {溶接学会論文集},
+  year = {2001},
+  volume = {19},
+  pages = {709-716},
+  number = {4},
+  month = {11},
+  day = {05},
+  file = {2001_19_709_溶接欠陥を有する継手の極低サイクル疲労特性に及ぼす板厚の影響・ガス導管円周溶接部の許容きず寸法の検討(第2報).pdf:2001_19_709_溶接欠陥を有する継手の極低サイクル疲労特性に及ぼす板厚の影響・ガス導管円周溶接部の許容きず寸法の検討(第2報).pdf:PDF},
+  issn = {02884771},
+  owner = {03948},
+  pdf = {2001_19_709_溶接欠陥を有する継手の極低サイクル疲労特性に及ぼす板厚の影響・ガス導管円周溶接部の許容きず寸法の検討(第2報).pdf},
+  publisher = {社団法人溶接学会},
+  timestamp = {2011.12.08},
+  url = {http://ci.nii.ac.jp/naid/110003422138/}
 }
 
 @ARTICLE{1999_633_181,
