リンクの修正コードの修正
相対位置でファイルの場所を指定
文字コードはUTF8に

--- a/JSSC.bib
+++ b/JSSC.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.7.2.
+% This file was created with JabRef 2.6.
 % Encoding: UTF8
 
 @ARTICLE{2008_15_79,
@@ -143,4 +143,6 @@
   memo = {PDF_LINK: http://www.journalarchive.jst.go.jp/jnlpdf.php?cdjournal=jssc1994&cdvol=1&noissue=3&startpage=91&chr=ja},
   url = {http://www.journalarchive.jst.go.jp/japanese/jnlabstract_ja.php?cdjournal=jssc1994&cdvol=1&noissue=3&startpage=91}
 }
+
+@comment{jabref-meta: fileDirectory:pdfs;}
 
