--- a/JWS-list.bib
+++ b/JWS-list.bib
@@ -1,88 +1,85 @@
-% This file was created with JabRef 2.7.2.
-% Encoding: SJIS
+% This file was created with JabRef 2.6.
+% Encoding: UTF8
 
 @ARTICLE{1999_17_111,
-  author = {ŽO–Ø çšæ and ŒŠŒ© Œ’Œá and ’J ‰pŽ÷ and ™–{ ˆê˜N},
-  title = {—nÚŽ~’[•”‰ü—Ç‚É‚æ‚é”æ˜J‹­“xŒüã–@},
-  journal = {—nÚŠw‰ï˜_•¶W},
+  author = {ä¸‰æœ¨ åƒå£½ and ç©´è¦‹ å¥å¾ and è°· è‹±æ¨¹ and æ‰æœ¬ ä¸€æœ—},
+  title = {æº¶æŽ¥æ­¢ç«¯éƒ¨æ”¹è‰¯ã«ã‚ˆã‚‹ç–²åŠ´å¼·åº¦å‘ä¸Šæ³•},
+  journal = {æº¶æŽ¥å­¦ä¼šè«–æ–‡é›†},
   year = {1999},
   volume = {17},
   pages = {111-119},
   number = {1},
   month = {02},
   day = {05},
-  file = {1999_17_111_—nÚŽ~’[•”‰ü—Ç‚É‚æ‚é”æ˜J‹­“xŒüã–@.pdf:1999_17_111_—nÚŽ~’[•”‰ü—Ç‚É‚æ‚é”æ˜J‹­“xŒüã–@.pdf:PDF},
+  file = {1999_17_111_æº¶æŽ¥æ­¢ç«¯éƒ¨æ”¹è‰¯ã«ã‚ˆã‚‹ç–²åŠ´å¼·åº¦å‘ä¸Šæ³•.pdf:JWS\\1999_17_111_æº¶æŽ¥æ­¢ç«¯éƒ¨æ”¹è‰¯ã«ã‚ˆã‚‹ç–²åŠ´å¼·åº¦å‘ä¸Šæ³•.pdf:PDF},
   issn = {02884771},
-  pdf = {1999_17_111_—nÚŽ~’[•”‰ü—Ç‚É‚æ‚é”æ˜J‹­“xŒüã–@.pdf},
-  publisher = {ŽÐ’c–@l—nÚŠw‰ï},
+  publisher = {ç¤¾å›£æ³•äººæº¶æŽ¥å­¦ä¼š},
   url = {http://ci.nii.ac.jp/naid/110003421917/}
 }
 
 @ARTICLE{1986_4_157,
-  author = {ŽO–Ø çŽõ and X –Ò and ²X–Ø —˜Ž‹ and ’|–¼ ‹»‰p and ã–{ Œª“ñ},
-  title = {c•ûŒü‚·‚Ý“÷—nÚŒpŽè‚Ì”æ˜J‹­“x : —nÚ–_Œp‚¬‚Ì‰e‹¿},
-  journal = {—nÚŠw‰ï˜_•¶W},
+  author = {ä¸‰æœ¨ åƒå¯¿ and æ£® çŒ› and ä½ã€…æœ¨ åˆ©è¦– and ç«¹å èˆˆè‹± and é˜ªæœ¬ è¬™äºŒ},
+  title = {ç¸¦æ–¹å‘ã™ã¿è‚‰æº¶æŽ¥ç¶™æ‰‹ã®ç–²åŠ´å¼·åº¦ : æº¶æŽ¥æ£’ç¶™ãŽã®å½±éŸ¿},
+  journal = {æº¶æŽ¥å­¦ä¼šè«–æ–‡é›†},
   year = {1986},
   volume = {4},
   pages = {157-164},
   number = {2},
   month = {05},
   day = {05},
-  file = {1986_4_157_c•ûŒü‚·‚Ý“÷—nÚŒpŽè‚Ì”æ˜J‹­“xE—nÚ–_Œp‚¬‚Ì‰e‹¿.pdf:1986_4_157_c•ûŒü‚·‚Ý“÷—nÚŒpŽè‚Ì”æ˜J‹­“xE—nÚ–_Œp‚¬‚Ì‰e‹¿.pdf:PDF},
+  file = {1986_4_157_ç¸¦æ–¹å‘ã™ã¿è‚‰æº¶æŽ¥ç¶™æ‰‹ã®ç–²åŠ´å¼·åº¦ãƒ»æº¶æŽ¥æ£’ç¶™ãŽã®å½±éŸ¿.pdf:JWS\\1986_4_157_ç¸¦æ–¹å‘ã™ã¿è‚‰æº¶æŽ¥ç¶™æ‰‹ã®ç–²åŠ´å¼·åº¦ãƒ»æº¶æŽ¥æ£’ç¶™ãŽã®å½±éŸ¿.pdf:PDF},
   issn = {02884771},
-  pdf = {1986_4_157_c•ûŒü‚·‚Ý“÷—nÚŒpŽè‚Ì”æ˜J‹­“xE—nÚ–_Œp‚¬‚Ì‰e‹¿.pdf},
-  publisher = {ŽÐ’c–@l—nÚŠw‰ï},
+  publisher = {ç¤¾å›£æ³•äººæº¶æŽ¥å­¦ä¼š},
   url = {http://ci.nii.ac.jp/naid/110003422712/}
 }
 
 @ARTICLE{2005_23_422,
-  author = {“ì –M–¾ and ‘Œ’J ³ and ŽO–Ø çšæ},
-  title = {“¹˜H‹´Ž¦•û‘‚É‚¨‚¯‚é‚·‚Ý“÷—nÚƒTƒCƒYŠî€‚ÌlŽ@},
-  journal = {—nÚŠw‰ï˜_•¶W},
+  author = {å— é‚¦æ˜Ž and ç³Ÿè°· æ­£ and ä¸‰æœ¨ åƒå£½},
+  title = {é“è·¯æ©‹ç¤ºæ–¹æ›¸ã«ãŠã‘ã‚‹ã™ã¿è‚‰æº¶æŽ¥ã‚µã‚¤ã‚ºåŸºæº–ã®è€ƒå¯Ÿ},
+  journal = {æº¶æŽ¥å­¦ä¼šè«–æ–‡é›†},
   year = {2005},
   volume = {23},
   pages = {422-430},
   number = {3},
   month = {08},
   day = {05},
-  file = {2005_23_422_“¹˜H‹´Ž¦•û‘‚É‚¨‚¯‚é‚·‚Ý“÷—nÚƒTƒCƒYŠî€‚ÌlŽ@.pdf:2005_23_422_“¹˜H‹´Ž¦•û‘‚É‚¨‚¯‚é‚·‚Ý“÷—nÚƒTƒCƒYŠî€‚ÌlŽ@.pdf:PDF},
+  file = {2005_23_422_é“è·¯æ©‹ç¤ºæ–¹æ›¸ã«ãŠã‘ã‚‹ã™ã¿è‚‰æº¶æŽ¥ã‚µã‚¤ã‚ºåŸºæº–ã®è€ƒå¯Ÿ.pdf:JWS\\2005_23_422_é“è·¯æ©‹ç¤ºæ–¹æ›¸ã«ãŠã‘ã‚‹ã™ã¿è‚‰æº¶æŽ¥ã‚µã‚¤ã‚ºåŸºæº–ã®è€ƒå¯Ÿ.pdf:PDF},
   issn = {02884771},
-  pdf = {2005_23_422_“¹˜H‹´Ž¦•û‘‚É‚¨‚¯‚é‚·‚Ý“÷—nÚƒTƒCƒYŠî€‚ÌlŽ@.pdf},
-  publisher = {ŽÐ’c–@l—nÚŠw‰ï},
+  publisher = {ç¤¾å›£æ³•äººæº¶æŽ¥å­¦ä¼š},
   url = {http://ci.nii.ac.jp/naid/110003423567/}
 }
 
 @ARTICLE{1999_17_130,
-  author = {£ŒË ŒúŽi and ‘“c ’q‹I and ’¬“c i and ŽO–Ø çšæ},
-  title = {—nÚ‚«‚¸‚ð—L‚·‚éŒpŽè‚Ì‹É’áƒTƒCƒNƒ‹”æ˜J“Á« : ƒKƒX“±ŠÇ‰~Žü—nÚ•”‚Ì‹–—e‚«‚¸¡–@‚ÌŒŸ“¢},
-  journal = {—nÚŠw‰ï˜_•¶W},
+  author = {ç€¬æˆ¸ åŽšå¸ and å¢—ç”° æ™ºç´€ and ç”ºç”° é€² and ä¸‰æœ¨ åƒå£½},
+  title = {æº¶æŽ¥ããšã‚’æœ‰ã™ã‚‹ç¶™æ‰‹ã®æ¥µä½Žã‚µã‚¤ã‚¯ãƒ«ç–²åŠ´ç‰¹æ€§ : ã‚¬ã‚¹å°Žç®¡å††å‘¨æº¶æŽ¥éƒ¨ã®è¨±å®¹ããšå¯¸æ³•ã®æ¤œè¨Ž},
+  journal = {æº¶æŽ¥å­¦ä¼šè«–æ–‡é›†},
   year = {1999},
   volume = {17},
   pages = {130-138},
   number = {1},
   month = {02},
   day = {05},
-  file = {1999_17_130_—nÚ‚«‚¸‚ð—L‚·‚éŒpŽè‚Ì‹É’áƒTƒCƒNƒ‹”æ˜J“Á«EƒKƒX“±ŠÇ‰~Žü—nÚ•”‚Ì‹–—e‚«‚¸¡–@‚ÌŒŸ“¢.pdf:1999_17_130_—nÚ‚«‚¸‚ð—L‚·‚éŒpŽè‚Ì‹É’áƒTƒCƒNƒ‹”æ˜J“Á«EƒKƒX“±ŠÇ‰~Žü—nÚ•”‚Ì‹–—e‚«‚¸¡–@‚ÌŒŸ“¢.pdf:PDF},
+  file = {1999_17_130_æº¶æŽ¥ããšã‚’æœ‰ã™ã‚‹ç¶™æ‰‹ã®æ¥µä½Žã‚µã‚¤ã‚¯ãƒ«ç–²åŠ´ç‰¹æ€§ãƒ»ã‚¬ã‚¹å°Žç®¡å††å‘¨æº¶æŽ¥éƒ¨ã®è¨±å®¹ããšå¯¸æ³•ã®æ¤œè¨Ž.pdf:JWS\\1999_17_130_æº¶æŽ¥ããšã‚’æœ‰ã™ã‚‹ç¶™æ‰‹ã®æ¥µä½Žã‚µã‚¤ã‚¯ãƒ«ç–²åŠ´ç‰¹æ€§ãƒ»ã‚¬ã‚¹å°Žç®¡å††å‘¨æº¶æŽ¥éƒ¨ã®è¨±å®¹ããšå¯¸æ³•ã®æ¤œè¨Ž.pdf:PDF},
   issn = {02884771},
-  pdf = {1999_17_130_—nÚ‚«‚¸‚ð—L‚·‚éŒpŽè‚Ì‹É’áƒTƒCƒNƒ‹”æ˜J“Á«EƒKƒX“±ŠÇ‰~Žü—nÚ•”‚Ì‹–—e‚«‚¸¡–@‚ÌŒŸ“¢.pdf},
-  publisher = {ŽÐ’c–@l—nÚŠw‰ï},
+  publisher = {ç¤¾å›£æ³•äººæº¶æŽ¥å­¦ä¼š},
   url = {http://ci.nii.ac.jp/naid/110003421919/}
 }
 
 @ARTICLE{2001_19_709,
-  author = {ŠžX —zˆê and £ŒË ŒúŽi and ‘“c ’q‹I and ’¬“c i and ŽO–Ø çšæ},
-  title = {—nÚŒ‡Š×‚ð—L‚·‚éŒpŽè‚Ì‹É’áƒTƒCƒNƒ‹”æ˜J“Á«‚É‹y‚Ú‚·”ÂŒú‚Ì‰e‹¿ : ƒKƒX“±ŠÇ‰~Žü—nÚ•”‚Ì‹–—e‚«‚¸¡–@‚ÌŒŸ“¢(‘æ2•ñ)},
-  journal = {—nÚŠw‰ï˜_•¶W},
+  author = {è±æ£® é™½ä¸€ and ç€¬æˆ¸ åŽšå¸ and å¢—ç”° æ™ºç´€ and ç”ºç”° é€² and ä¸‰æœ¨ åƒå£½},
+  title = {æº¶æŽ¥æ¬ é™¥ã‚’æœ‰ã™ã‚‹ç¶™æ‰‹ã®æ¥µä½Žã‚µã‚¤ã‚¯ãƒ«ç–²åŠ´ç‰¹æ€§ã«åŠã¼ã™æ¿åŽšã®å½±éŸ¿ : ã‚¬ã‚¹å°Žç®¡å††å‘¨æº¶æŽ¥éƒ¨ã®è¨±å®¹ããšå¯¸æ³•ã®æ¤œè¨Ž(ç¬¬2å ±)},
+  journal = {æº¶æŽ¥å­¦ä¼šè«–æ–‡é›†},
   year = {2001},
   volume = {19},
   pages = {709-716},
   number = {4},
   month = {11},
   day = {05},
-  file = {2001_19_709_—nÚŒ‡Š×‚ð—L‚·‚éŒpŽè‚Ì‹É’áƒTƒCƒNƒ‹”æ˜J“Á«‚É‹y‚Ú‚·”ÂŒú‚Ì‰e‹¿EƒKƒX“±ŠÇ‰~Žü—nÚ•”‚Ì‹–—e‚«‚¸¡–@‚ÌŒŸ“¢(‘æ2•ñ).pdf:2001_19_709_—nÚŒ‡Š×‚ð—L‚·‚éŒpŽè‚Ì‹É’áƒTƒCƒNƒ‹”æ˜J“Á«‚É‹y‚Ú‚·”ÂŒú‚Ì‰e‹¿EƒKƒX“±ŠÇ‰~Žü—nÚ•”‚Ì‹–—e‚«‚¸¡–@‚ÌŒŸ“¢(‘æ2•ñ).pdf:PDF},
+  file = {2001_19_709_æº¶æŽ¥æ¬ é™¥ã‚’æœ‰ã™ã‚‹ç¶™æ‰‹ã®æ¥µä½Žã‚µã‚¤ã‚¯ãƒ«ç–²åŠ´ç‰¹æ€§ã«åŠã¼ã™æ¿åŽšã®å½±éŸ¿ãƒ»ã‚¬ã‚¹å°Žç®¡å††å‘¨æº¶æŽ¥éƒ¨ã®è¨±å®¹ããšå¯¸æ³•ã®æ¤œè¨Ž(ç¬¬2å ±).pdf:JWS\\2001_19_709_æº¶æŽ¥æ¬ é™¥ã‚’æœ‰ã™ã‚‹ç¶™æ‰‹ã®æ¥µä½Žã‚µã‚¤ã‚¯ãƒ«ç–²åŠ´ç‰¹æ€§ã«åŠã¼ã™æ¿åŽšã®å½±éŸ¿ãƒ»ã‚¬ã‚¹å°Žç®¡å††å‘¨æº¶æŽ¥éƒ¨ã®è¨±å®¹ããšå¯¸æ³•ã®æ¤œè¨Ž(ç¬¬2å ±).pdf:PDF},
   issn = {02884771},
-  pdf = {2001_19_709_—nÚŒ‡Š×‚ð—L‚·‚éŒpŽè‚Ì‹É’áƒTƒCƒNƒ‹”æ˜J“Á«‚É‹y‚Ú‚·”ÂŒú‚Ì‰e‹¿EƒKƒX“±ŠÇ‰~Žü—nÚ•”‚Ì‹–—e‚«‚¸¡–@‚ÌŒŸ“¢(‘æ2•ñ).pdf},
-  publisher = {ŽÐ’c–@l—nÚŠw‰ï},
+  publisher = {ç¤¾å›£æ³•äººæº¶æŽ¥å­¦ä¼š},
   url = {http://ci.nii.ac.jp/naid/110003422138/}
 }
+
+@comment{jabref-meta: fileDirectory:pdfs;}
 
