無駄な空行が入っていたのを修正

--- a/procJSCE-list.bib
+++ b/procJSCE-list.bib
@@ -154,9 +154,7 @@
 }
 
 @ARTICLE{2004_752_1,
-  author = {Narongsak RATTANASUWANNACHART and 三木 千壽 and 廣瀬 壮一 and 白旗 弘実
-	
-	},
+  author = {Narongsak RATTANASUWANNACHART and 三木 千壽 and 廣瀬 壮一 and 白旗 弘実},
   title = {圧延鋼板における音響異方性と不均質性についての検討},
   journal = {土木学会論文集},
   year = {2004},
@@ -1394,9 +1392,7 @@
 }
 
 @ARTICLE{1987_386_115,
-  author = {増田 陳紀 and 三木 千寿 and 柏木 洋之 and 街道 浩
-	
-	},
+  author = {増田 陳紀 and 三木 千寿 and 柏木 洋之 and 街道 浩},
   title = {I型並列合成桁橋の対傾構部材力の解析},
   journal = {土木学会論文集},
   year = {1987},
@@ -2231,9 +2227,7 @@
 }
 
 @ARTICLE{1988_398_189,
-  author = {竹名 興英 and 伊藤 文夫 and 西野 文雄 and 三木 千寿
-	
-	},
+  author = {竹名 興英 and 伊藤 文夫 and 西野 文雄 and 三木 千寿},
   title = {高張力鋼を用いた前面隅肉溶接継手の疲労強度の破壊力学解析},
   journal = {土木学会論文集},
   year = {1988},
@@ -2246,9 +2240,7 @@
 }
 
 @ARTICLE{1987_386_207,
-  author = {竹名 興英 and 伊藤 文夫 and 西野 文雄 and 三木 千寿
-	
-	},
+  author = {竹名 興英 and 伊藤 文夫 and 西野 文雄 and 三木 千寿},
   title = {フランジガセット継手の疲労強度に及ぼすフィレット半径の影響},
   journal = {土木学会論文集},
   year = {1987},
@@ -2261,9 +2253,7 @@
 }
 
 @ARTICLE{1987_380_163,
-  author = {竹名 興英 and 川上 博道 and 谷藤 精一 and 三木 千寿
-	
-	},
+  author = {竹名 興英 and 川上 博道 and 谷藤 精一 and 三木 千寿},
   title = {経年劣化リベットプレートガーターの疲労強度},
   journal = {土木学会論文集},
   year = {1987},
@@ -2276,9 +2266,7 @@
 }
 
 @ARTICLE{1987_380_67,
-  author = {竹名 興英 and 平野 茂 and 伊藤 文夫 and 三木 千寿
-	
-	},
+  author = {竹名 興英 and 平野 茂 and 伊藤 文夫 and 三木 千寿},
   title = {箱断面トラス部材の疲労強度},
   journal = {土木学会論文集},
   year = {1987},
