不足していた論文を追加

--- a/procJSCE-list.bib
+++ b/procJSCE-list.bib
@@ -1330,6 +1330,20 @@
   url = {http://ci.nii.ac.jp/naid/10007555284/}
 }
 
+@ARTICLE{2010_66_653,
+  author = {冨永 知徳 and 三木 千壽 and 糟谷 正 and 松岡 和巳},
+  title = {低温変態溶材の変態温度，鋼材強度，および作用外力が残留応力に及ぼす影響},
+  journal = {土木学会論文集Ａ},
+  year = {2010},
+  volume = {66},
+  pages = {653-662},
+  number = {4},
+  file = {2010_66_653_低温変態溶材の変態温度，鋼材強度，および作用外力が残留応力に及ぼす影響.pdf:JSCE\\2010_66_653_低温変態溶材の変態温度，鋼材強度，および作用外力が残留応力に及ぼす影響.pdf:PDF},
+  memo = {PDF_LINK: http://www.jstage.jst.go.jp/article/jsceja/66/4/653/_pdf/-char/ja/},
+  timestamp = {2011.12.09},
+  url = {http://www.jstage.jst.go.jp/article/jsceja/66/4/66_653/_article/-char/ja/}
+}
+
 @ARTICLE{2004_759_355,
   author = {冨永 知徳 and 三木 千壽 and 高橋 健 and 糟谷 正 and 森影 康},
   title = {低温変態溶接材料を用いた既設鋼橋の疲労強度向上工法の研究},
@@ -2094,6 +2108,20 @@
   publisher = {土木学会},
   timestamp = {2011.12.05},
   url = {http://ci.nii.ac.jp/naid/10002527281/}
+}
+
+@ARTICLE{2010_66_286,
+  author = {白旗 弘実 and 三木 千壽},
+  title = {複雑な板組内部の三次元溶接欠陥の超音波探傷試験},
+  journal = {土木学会論文集Ａ},
+  year = {2010},
+  volume = {66},
+  pages = {286-296},
+  number = {2},
+  file = {2010_66_286_複雑な板組内部の三次元溶接欠陥の超音波探傷試験.pdf:JSCE\\2010_66_286_複雑な板組内部の三次元溶接欠陥の超音波探傷試験.pdf:PDF},
+  memo = {PDF_LINK: http://www.jstage.jst.go.jp/article/jsceja/66/2/286/_pdf/-char/ja/},
+  timestamp = {2011.12.09},
+  url = {http://www.jstage.jst.go.jp/article/jsceja/66/2/66_286/_article/-char/ja/}
 }
 
 @ARTICLE{1999_619_279,
