鈴木さんチェックによる誤字訂正

--- a/C-Miki.bib
+++ b/C-Miki.bib
@@ -473,7 +473,7 @@
 
 @ARTICLE{2000_654_131,
   author = {三木 千壽 and 白旗 弘実 and 西田 朱里 and 柳沼 安俊},
-  title = {タンデムアレイ探蝕子による突き合わせ溶接継手の超音波非破壊検査特性},
+  title = {タンデムアレイ探触子による突き合わせ溶接継手の超音波非破壊検査特性},
   journal = {土木学会論文集 = Proceedings of JSCE},
   year = {2000},
   volume = {654},
@@ -1786,7 +1786,7 @@
 
 @ARTICLE{2002_717_23,
   author = {小西 拓洋 and 冨澤 雅幸 and 三木 千寿},
-  title = {FEM と数値最適化に基づいた鋼橋コスト最小化設計の試み},
+  title = {FEMと数値最適化に基づいた鋼橋コスト最小化設計の試み},
   journal = {土木学会論文集 = Proceedings of JSCE},
   year = {2002},
   volume = {717},
@@ -2683,7 +2683,7 @@
 
 @ARTICLE{1995_525_319,
   author = {遠藤 武夫 and 松本 毅 and 塚原 弘光 and 三木 千壽},
-  title = {大規模斜張橋ケ-ブル定着構造の疲労},
+  title = {大規模斜張橋ケーブル定着構造の疲労},
   journal = {土木学会論文集 = Proceedings of JSCE},
   year = {1995},
   volume = {525},
